--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-
+bytecode_hash = "none"
+cbor_metadata = false
+always_use_create_2_factory = true
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
