--- a/foundry.toml
+++ b/foundry.toml
@@ -5,6 +5,9 @@ libs = ["lib"]
 bytecode_hash = "none"
 cbor_metadata = false
 always_use_create_2_factory = true
+via_ir = true
+optimizer = true
+optimizer_runs = 200
 
 remappings = [
     "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
