--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,12 @@ jobs:
 
       - name: Predict Contract Addresses
         run: |
-          forge script script/PredictAddresses.s.sol
+          forge script script/PredictAddresses.s.sol \
+          --rpc-url ${{ vars.RPC_URL }} \
+          --private-key ${{ secrets.PRIVATE_KEY }} \
+          --broadcast \
+          --verify \
+          -vvv
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           SALT_SUFFIX: ${{ github.event.inputs.environment }}_${{ github.sha }}
@@ -44,7 +49,7 @@ jobs:
       - name: Deploy Upgradeable Contracts
         run: |
           forge script script/DeployUpgradeable.s.sol \
-            --rpc-url ${{ secrets.RPC_URL }} \
+            --rpc-url ${{ vars.RPC_URL }} \
             --private-key ${{ secrets.PRIVATE_KEY }} \
             --broadcast \
             --verify \
