--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -1,4 +1,4 @@
-name: CI Build
+name: CI
 
 on:
   push:
@@ -11,7 +11,7 @@ env:
 
 jobs:
   build:
-    name: Foundry project build
+    name: Project Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
