--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,7 @@ jobs:
           --private-key ${{ secrets.PRIVATE_KEY }} \
           --create2-deployer ${{ vars.CREATE2_ADDR }} \
           --broadcast \
-          --verify \          
-          -vvv
+          --verify
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           SALT_SUFFIX: ${{ github.event.inputs.environment }}_${{ github.sha }}
@@ -48,7 +47,6 @@ jobs:
             --private-key ${{ secrets.PRIVATE_KEY }} \
             --create2-deployer ${{ vars.CREATE2_ADDR }} \
             --broadcast \
-            --verify \
-            -vvv
+            --verify
         env:
           SALT_SUFFIX: ${{ github.event.inputs.environment }}_${{ github.sha }}
