--- a/examples/package.json
+++ b/examples/package.json
@@ -7,12 +7,13 @@
     "build": "tsc"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "ethers": "^6.8.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.0"
+    "ts-node": "^10.9.0",
+    "typescript": "^5.0.0"
   },
   "keywords": [
     "ethereum",
