--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,12 @@ jobs:
             --private-key ${{ secrets.PRIVATE_KEY }} \
             --create2-deployer ${{ vars.CREATE2_ADDR }} \
             --broadcast > logs.out
-          cat logs.out
-          cat logs.out >> "$GITHUB_OUTPUT"
+          DELIM="$(uuidgen || echo __EOF__$$)"
+          {
+            printf 'msg<<%s\n' "$DELIM"     
+            cat logs.out
+            printf '%s\n' "$DELIM"          
+          } >> "$GITHUB_OUTPUT"
         env:
           SALT_SUFFIX: ${{ github.event.inputs.environment }}_${{ github.sha }}
       - name: Send message to Deploy channel
