fix: correct typo in `Submitted` event and update lint configuration

--- a/foundry.toml
+++ b/foundry.toml
@@ -14,7 +14,7 @@ remappings = [
     "@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/",
 ]
 
-[lint]
+[profile.lint]
 exclude_lints = ["mixed-case-function", "pascal-case-struct"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
