--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.27"
 bytecode_hash = "none"
 cbor_metadata = false
 always_use_create_2_factory = true
