--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -1,31 +1,30 @@
-name: PR → Codex review
+name: PR
 
 on:
   pull_request:
-    types: [opened, reopened, ready_for_review]
+
+permissions:
+  contents: read
+  pull-requests: write # Required to post comments on PRs
 
 jobs:
   codex_review:
+    name: Codex Review
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-    permissions:
-      contents: read
-      pull-requests: write
-
+    timeout-minutes: 10
     steps:
       - name: Checkout PR HEAD (full history)
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
 
       - uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version: '22'
 
       - name: Install Codex CLI
         run: npm i -g @openai/codex
-
       - name: Configure Codex to use OpenRouter
         run: |
           mkdir -p ~/.codex
@@ -158,10 +157,11 @@ jobs:
           sed -e '$a\' -i review.md.clean
           DELIM="$(uuidgen || echo __EOF__$$)"
           {
-            printf 'msg<<%s\n' "$DELIM"     
-            cat review.md.clean             
-            printf '%s\n' "$DELIM"          
+            printf 'msg<<%s\n' "$DELIM"
+            cat review.md.clean
+            printf '%s\n' "$DELIM"
           } >> "$GITHUB_OUTPUT"
+
       - name: Send message to Deploy channel
         id: matrix-chat-message
         uses: fadenb/matrix-chat-message@v0.0.6
@@ -172,3 +172,10 @@ jobs:
           message: |
             **Pull request N ${{ github.event.pull_request.number }}** ${{ github.event.pull_request.html_url }}
             ${{ steps.review.outputs.msg }}
+
+      - name: Write PR comment
+        uses: thollander/actions-comment-pull-request@v3
+        with:
+          message: ${{ steps.review.outputs.msg }}
+          mode: upsert
+          comment-tag: codex-review
