--- a/foundry.toml
+++ b/foundry.toml
@@ -17,4 +17,9 @@ remappings = [
     "@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/",
 ]
 
+[lint]
+# ... rest of lint config ...
+exclude_lints = ["mixed-case-function", "mixed-case-variable", "pascal-case-struct"]
+
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
