feat: add ABI consistency check to CI pipeline

--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -179,3 +179,26 @@ jobs:
           message: ${{ steps.review.outputs.msg }}
           mode: upsert
           comment-tag: codex-review
+
+  abi_check:
+    name: ABI export up-to-date
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v5
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: 'v1.4.1'
+      - name: Ensure jq is installed
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+      - name: Build and Export ABI
+        run: make export-abi
+      - name: Verify no changes in ABI
+        # fails if any changes not committed
+        run: |
+          CHANGES=$(git status --porcelain)
+          echo "${CHANGES:-schema is up to date}"
+          test -z "$CHANGES"
