feat: Improvements and updates (#21)
* refactor: reduce redundancy in deployment scripts and extend base script usage

* refactor: enhance log formatting with consistent `string.concat` usage

* feat: add type gen

* chore: commit abi-export

* refactor: simplify CU script by removing unused functions and modularizing utils

* feat: add ABI consistency check to CI pipeline

* docs: readme update

--- a/examples/package.json
+++ b/examples/package.json
@@ -4,15 +4,18 @@
   "description": "TypeScript examples for Outbe L2 contracts",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "generate-types": "typechain --target ethers-v6 --out-dir contracts '../abi-export/*.json'"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
     "ethers": "^6.8.0"
   },
   "devDependencies": {
+    "@typechain/ethers-v6": "^0.5.1",
     "@types/node": "^20.0.0",
     "ts-node": "^10.9.0",
+    "typechain": "^8.3.2",
     "typescript": "^5.0.0"
   },
   "keywords": [
