--- a/foundry.toml
+++ b/foundry.toml
@@ -22,11 +22,11 @@ remappings = [
 ]
 
 # File system permissions for reading JSON fixtures
-fs_permissions = [{ access = "read", path = "./script/input/" }]
+fs_permissions = [{ access = "read-write", path = "./" }]
 
+# Linting
 [lint]
-# ... rest of lint config ...
-exclude_lints = ["mixed-case-function", "mixed-case-variable", "pascal-case-struct"]
+exclude_lints = ["mixed-case-function", "mixed-case-variable", "pascal-case-struct", "unsafe-cheatcode"]
 
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
